Data processor setup

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "server": "node server.js",
-    "client": "node client.js"
+    "client": "node client.js",
+    "processor": "node data_processor.js"
   },
   "dependencies": {
     "axios": "^1.0.0",
